Search form now lines up correctly on mobiles

--- a/resources/assets/styles/components/_forms.scss
+++ b/resources/assets/styles/components/_forms.scss
@@ -5,6 +5,7 @@
   label {
     @extend .form-group;
 
+    margin-bottom: 0;
     font-weight: normal;
   }
 
